testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/instance_names.lkql
val rules = @{
    goto_statements: [{instance_name: "an_instance", only_unconditional: true}],
    null_statements: [{instance_name: "an_instance"}]
}
